Fix overflow issue on columns

--- a/web/static/css/application.scss
+++ b/web/static/css/application.scss
@@ -25,6 +25,7 @@ html, body {
   display: flex;
   flex: 1;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .row {
