--- a/web/static/css/components/MeetingTime.scss
+++ b/web/static/css/components/MeetingTime.scss
@@ -1,3 +1,4 @@
 .MeetingTime {
   position: absolute;
+  overflow: hidden;
 }
